; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/video/vermilion/extr_vermilion.c_vmlfb_free_vram.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/video/vermilion/extr_vermilion.c_vmlfb_free_vram.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vml_info = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vml_info*)* @vmlfb_free_vram to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vmlfb_free_vram(%struct.vml_info* %0) #0 {
  %2 = alloca %struct.vml_info*, align 8
  %3 = alloca i32, align 4
  store %struct.vml_info* %0, %struct.vml_info** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %18, %1
  %5 = load i32, i32* %3, align 4
  %6 = load %struct.vml_info*, %struct.vml_info** %2, align 8
  %7 = getelementptr inbounds %struct.vml_info, %struct.vml_info* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = icmp slt i32 %5, %8
  br i1 %9, label %10, label %21

10:                                               ; preds = %4
  %11 = load %struct.vml_info*, %struct.vml_info** %2, align 8
  %12 = getelementptr inbounds %struct.vml_info, %struct.vml_info* %11, i32 0, i32 1
  %13 = load i32*, i32** %12, align 8
  %14 = load i32, i32* %3, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds i32, i32* %13, i64 %15
  %17 = call i32 @vmlfb_free_vram_area(i32* %16)
  br label %18

18:                                               ; preds = %10
  %19 = load i32, i32* %3, align 4
  %20 = add nsw i32 %19, 1
  store i32 %20, i32* %3, align 4
  br label %4

21:                                               ; preds = %4
  %22 = load %struct.vml_info*, %struct.vml_info** %2, align 8
  %23 = getelementptr inbounds %struct.vml_info, %struct.vml_info* %22, i32 0, i32 0
  store i32 0, i32* %23, align 8
  ret void
}

declare dso_local i32 @vmlfb_free_vram_area(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
